# task-make

./: README.md  install.sh  task.js
example/cmake_exam/: CMakeLists.txt  task.mk
example/cmake_exam/apps/: app1.cpp  app2.cpp
example/cmake_exam/include/: demo_api.h
example/cmake_exam/src/: main.cpp  my_lib.cpp
example/simple_exam/: task.mk
example/simple_exam/sub_mod/: task.mk
qjs_bin/Darwin-arm64/: qjs
qjs_bin/Darwin-x86_64/: qjs
qjs_bin/Linux-i686/: qjs
